Coffee Shop Starter Code/css/global.css
* {
    color: #393939;
}

a {
    text-decoration: none;
}

body {
    font-family: 'Open Sans';
    font-weight: 400;
}

h1, h2 {
    font-size: 3.75rem;
    font-weight: 300;
    text-align: center;
}

h3, .nav-heading {
    font-size: 2.063rem;
    font-weight: 300;
    text-align: center;
}

p {
    font-size: 1.125rem;
    font-weight: 400;
}

ul {
    list-style: none;
}

.nitro-h2 {
    text-align: left;
}

.icon-logo {
    min-width: 3.125rem;
    max-width: 7.5rem;
}

